# hexlet_pytest

./: pyproject.toml
src/hexlet_pytest/: main.py  stack.py
tests/: test_main.py  test_stack.py
