[project]
name = "hexlet-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gambit328", email = "73571911+gambit328@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
hexlet-pytest = "hexlet_pytest.main:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
